2009-11-13  Dirk Schulze  <krit@webkit.org>

        Reviewed by Gustavo Noronha.

        Skip fast/canvas/canvas-shadow.html we need to enable filters
        on cairo to pass this test.

        * platform/gtk/Skipped:

2009-11-13  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Skip one more new test.

        * platform/gtk/Skipped:

2009-11-12  Anantanarayanan G Iyengar  <ananta@chromium.org>

        Reviewed by Adam Barth.

        The document-html and window-html tests don't use a setTimeout to notify that the
        test is completed. The layout test plugin now issues the notifyDone call via
        javascript.
        
        https://bugs.webkit.org/show_bug.cgi?id=31067

        * plugins/document-open.html:
        * plugins/window-open.html:

2009-11-12  Kinuko Yasuda  <kinuko@google.com>

        Reviewed by Adam Barth.

        Makes the output of fast/events/mouse-click-events.html independent
        of the window size.
        https://bugs.webkit.org/show_bug.cgi?id=31405

        * fast/events/mouse-click-events-expected.txt:
        * fast/events/script-tests/mouse-click-events.js:

2009-11-12  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Transformed reflected elements are clipped inside element with opacity
        https://bugs.webkit.org/show_bug.cgi?id=30957
        
        Testcase for reflected and transformed elements inside an opacity layer.

        * fast/reflections/opacity-reflection-transform.html: Added.
        * platform/mac/fast/reflections/opacity-reflection-transform-expected.checksum: Added.
        * platform/mac/fast/reflections/opacity-reflection-transform-expected.png: Added.
        * platform/mac/fast/reflections/opacity-reflection-transform-expected.txt: Added.

2009-11-12  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Gustavo Noronha Silva.

        https://bugs.webkit.org/show_bug.cgi?id=30997
        [Gtk] Implemment AtkDocument
