@@ -1,13 +1,0 @@
-<iframe src="resources/innocent-victim.html"></iframe>
-<div id="console">FAIL</div>
-<script>
-if (window.layoutTestController)
-    layoutTestController.dumpAsText();
-
-window.onload = function() {
-    window.f = frames[0].atob;
-    document.domain = "0.0.1";
-    if (btoa(window.f("PASS")) == "PASS")
-        document.getElementById("console").innerHTML = "PASS"
-}
-</script>
